# autospatialqc-api

./: .gitignore  README.md  pyproject.toml  tox.ini
autospatialqc_api/: .gitignore  __init__.py  environment.py
autospatialqc_api/models/: __init__.py  database.py  errors.py  sample.py  user.py
autospatialqc_api/routes/: __init__.py  authentication.py  route_utils.py  samples.py
scripts/: bootstrap.sh  create-user.sh  get-example.sh  insert-samples.py  login.sh  post-example.sh  remap-json.sh
sql/: create-db.sql
tests/: test_nothing.py
